--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,35 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MVC Tech Blog</title>
+    <link rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link 
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
         rel="stylesheet" 
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
-        crossorigin="anonymous">
+        crossorigin="anonymous"/>
+    <link rel="stylesheet" href="/css/style.css"/>
 </head>
 
 <body class="flex-column min-100-vh">
-    <nav class="navbar">
-        <ul>
-            <li class="li-inline nav-item"><a href="/"><i class="bi bi-house">Home</i></a></li>
-            <li class="li-inline nav-item"><a href="/dashboard">Dashboard</a></li>
-            <li class="li-inline nav-item"><a href="/login">Login</a></li>
-            <li class="li-inline nav-item"><a href="#" id="logout-link">Logout</a></li>
-        </ul>
+    <nav class="navbar custom-navbar">
+        <div class="container">
+            <div class="ml-auto">
+                <a class="nav-item nav-link" href="/"><i class="bi bi-house"></i>Home</a>
+                {{#if loggedIn}}
+                    <a class="nav-item nav-link" href="/dashboard"><i class="bi bi-card-list"></i>Dashboard</a>                
+                    <a class="nav-item nav-link" href="/login" id="logout"><i class="bi bi-box-arrow-right"></i>Logout</a>
+                {{else}}
+                    <a class="nav-item nav-link" href="/login"><i class="bi bi-box-arrow-in-right"></i>Login</a>
+                {{/if}}
+            </div>
+        </div>
     </nav>
 
-    <header class="hero">
-        <h1 class="app-title"><a href="/">The Tech Blog</a></h1>
+    <header class="jumbotron jumbotron-fluid custom-jumbotron"> 
+        
+            <div class="row align-items-center">
+                <h1>Welcome to my Tech Blog</h1>
+                <p>You are visiting Selina's tech blog, where we share our coding tips and experience</p>
+            </div>
+         
     </header>
 
     <main class="col-auto">
         {{{body}}}
     </main>
-
-    <footer class="flex-row justify-center">
-        &copy; The Tech Blog Folks
-    </footer>
 </body>
 </html>
 
-<script src=""></script>
+<script scr="/js/logout.js"></script>
