--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -13,7 +13,7 @@
       </div>
 
       <div class="form-group">
-        <button type="submit" class="btn btn-primary">Edit</button>
+        <button type="submit" class="btn btn-primary"><i class="bi bi-pencil"></i>Edit Post</button>
       </div>
 
     </form>
