--- a/views/partials/commentcard.handlebars
+++ b/views/partials/commentcard.handlebars
@@ -1,21 +1,15 @@
 <div class="comment">
     {{#each this}}
     <div class="is-flex mb-4" style="max-height: 100px">       
-        <div class="control level-left">
-              <strong>{{username}} </strong> 
-              <br/>
-              <span> {{comment}}</span>
+        <div class="control float-left">
+              <p><strong>{{user.username}}: </strong>{{comment}} on {{formatDate created_at}}</p> 
         </div>  
 
-      {{#if loggedIn}}
-        <div class="level-right">  
-          <button class="btn btn-secondary" type="button" data-id={{id}} id="delComBtn"><i class="bi bi-trash"></i></button>
+        <div class="float-right">  
+          <button class="btn btn-secondary" type="button" data-id={{id}} id="delComBtn"><i class="bi bi-trash"></i>X</button>
         </div>  
-      {{/if}}
 
     </div>
-    {{/each}}
-    </div>             
-  </div>  
+    {{/each}}  
 </div>
 <script src="/js/deletecomment.js"></script>
