--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header">
         <h5 class="card-title float-left">{{post.title}}</h5>
-        <h8 class="card-subtitle mb-2 float-right">Posted by {{post.user.username}} on {{formatDate created_at}}</h6>
+        <h8 class="card-subtitle mb-2 float-right">Posted by {{post.user.username}} on {{formatDate post.created_at}}</h6>
     </div>  
     <div class="card-body">  
         <p class="card-text">{{post.content}}</p>
@@ -21,7 +21,7 @@
 
 <div class="card">
     <div class="card-header"></div>
-    <form class="card-body" id="new-comment">
+    <form class="card-body comment-form">
         <p class="form-label">Leave Comment:</p>
         <textarea class="form-input" id="comment" name="comment-body"></textarea>    
         <button type="submit" class="btn btn-primary">Submit Comment</button>        
