fix deletebtn and comment display

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,6 +187,10 @@ main {
     text-align: center;
 }
 
+.comment {
+  display: contents;
+  
+}
 /* FLEX CONTENT */
 .flex-row {
     display: flex;
