--- a/views/partials/postcard.handlebars
+++ b/views/partials/postcard.handlebars
@@ -7,6 +7,6 @@
         <p class="card-text">{{content}}</p>
     </div>    
     <div class="card-footer">
-        <a href="/post/{{id}}" class="card-link">Post link</a>
+        <a href="/post/{{id}}" class="card-link">Click here to see post detail</a>
     </div>
 </div>  
