--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -6,7 +6,7 @@
     <div class="card-body">  
         <p class="card-text">{{post.content}}</p>
     </div>
-    <div class="card-body">
+    <div class="card-body comment">
             {{> commentcard post.comments}}
     </div>
 </div> 
@@ -16,7 +16,7 @@
 {{#if loggedIn}}
 <div class="d-flex flex-column flex-wrap ml-2">            
     <button class="btn btn-danger" id="del-post-btn"><i class="bi bi-trash"></i>Delete Post</button>            
-    <a class="btn btn-secondary" href="/api/post/{{post.id}}"><i class="bi bi-pencil"></i>Edit Post</a>
+    <a class="btn btn-secondary" href="/dashboard/edit/{{post.id}}"><i class="bi bi-pencil"></i>Edit Post</a>
 </div>
 
 <div class="card">
@@ -30,3 +30,4 @@
 {{/if}}
 
 <script src="/js/comment.js"></script>
+<script src="/js/deletepost.js"></script>
