--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,3 +1,4 @@
+<p>Please log in to leave comments</p>
 <div class="card">
     <div class="card-header">
         <h5 class="card-title float-left">{{post.title}}</h5>
