--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,5 +1,5 @@
-<p>Please log in to leave comments</p>
-<div class="card">
+<p class="col-md-6 col-lg-4 mb-5">Please log in to leave comments</p>
+<div class="card col-md-6 col-lg-4 mb-5">
     <div class="card-header">
         <h5 class="card-title float-left">{{post.title}}</h5>
         <h8 class="card-subtitle mb-2 float-right">Posted by {{post.user.username}} on {{formatDate post.created_at}}</h6>
