--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,9 +16,9 @@
 </head>
 
 <body class="flex-column min-100-vh">
-    <nav class="navbar custom-navbar">
+    <nav class="navbar custom-navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <div class="ml-auto">
+            <div>
                 <a class="nav-item nav-link" href="/"><i class="bi bi-house"></i>Home</a>                
                 <a class="nav-item nav-link" href="/dashboard"><i class="bi bi-card-list"></i>Dashboard</a>       
                 {{#if loggedIn}}             
@@ -30,13 +30,10 @@
         </div>
     </nav>
 
-    <header class="jumbotron jumbotron-fluid custom-jumbotron"> 
-        
-            <div class="row align-items-center">
-                <h1>Welcome to my Tech Blog</h1>
-                <p>You are visiting Selina's tech blog, where we share our coding tips and experience</p>
-            </div>
-         
+    <header class="text-center">        
+            <div class="container d-flex align-items-center flex-column">
+                <h1 id="header">Welcome to Selina's Tech Blog</h1>
+            </div>        
     </header>
 
     <main class="col-auto">
